--- a/numgame/MainWindow.xaml
+++ b/numgame/MainWindow.xaml
@@ -7,6 +7,7 @@
         xmlns:sys="clr-namespace:System;assembly=mscorlib"
         mc:Ignorable="d"
         Title="Guess the number!" Height="350" Width="525">
+
     <Grid>
         <TextBlock x:Name="textBlock" 
     		HorizontalAlignment="Left" 
@@ -41,7 +42,18 @@
                  Background="Transparent"/>
         </StackPanel>
 
-        <Button x:Name="send" Content="Send" HorizontalAlignment="Left" Margin="135,10,0,0" VerticalAlignment="Top" Width="75" Command="{Binding SendCommand}"/>
+        <Button x:Name="send" 
+                Content="Send" 
+                HorizontalAlignment="Left" 
+                Margin="135,10,0,0" 
+                VerticalAlignment="Top" 
+                Width="75"
+                IsDefault="True"
+                Click="send_Click"
+                KeyDown="send_KeyDown"
+                Command="{Binding SendCommand}">
+        </Button>
+        
         <Label x:Name="result" Content="{Binding Result}" HorizontalAlignment="Left" Margin="10,35,0,0" VerticalAlignment="Top" Height="26"/>
     </Grid>
 </Window>
