--- a/EladoKliens/MainWindow.xaml
+++ b/EladoKliens/MainWindow.xaml
@@ -5,8 +5,15 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:EladoKliens"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="Eladó" Height="350" Width="525">
     <Grid>
-        
+        <StackPanel HorizontalAlignment="Left" Height="319" VerticalAlignment="Top" Width="135" Margin="5,0,0,0">
+            <Label x:Name="label" Content="Felhasználónév" />
+            <TextBox x:Name="textBox" Height="23" TextWrapping="Wrap" Text=""/>
+            <Label x:Name="label1" Content="Jelszó"/>
+            <PasswordBox x:Name="passwordBox" MaxLength="8"/>
+            <Button x:Name="button" Content="Button" Margin="5,10,5,0"/>
+        </StackPanel>
+
     </Grid>
 </Window>
