--- a/RaktarosKliens/MainWindow.xaml
+++ b/RaktarosKliens/MainWindow.xaml
@@ -16,39 +16,39 @@
 
         <StackPanel Grid.Column="0">
             <TextBlock Text="Username" HorizontalAlignment="Center" Margin="0,0,0,5"/>
-            <TextBox Text="{Binding LoginName}" Width="100" HorizontalAlignment="Center" Margin="0,0,0,5"/>
+            <TextBox Name="txtUserName" Width="100" HorizontalAlignment="Center" Margin="0,0,0,5"/>
             <TextBlock Text="Password" HorizontalAlignment ="Center" Margin="0,0,0,5"/>
-            <TextBox Text="{Binding PassWord}" Width="100" HorizontalAlignment="Center" Margin="0,0,0,20"/>
-            <Button MinWidth="90" HorizontalAlignment="Center">
+            <TextBox Name="txtPassWord" Width="100" HorizontalAlignment="Center" Margin="0,0,0,20"/>
+            <Button Name ="btnLogin" Click="btnLogin_Click" MinWidth="90" HorizontalAlignment="Center">
                 <TextBlock Text="Login" Padding="2"/>
             </Button>
         </StackPanel>
 
-        <StackPanel Grid.Column="1">
+        <StackPanel Name="sp1" Visibility ="Collapsed" Grid.Column="1">
             <TextBlock Text="Productname" HorizontalAlignment="Center" Margin="0,0,0,5"/>
-                <TextBox Text="{Binding ProductName}" Width="100" HorizontalAlignment="Center" Margin="0,0,0,5"/>
+                <TextBox Name="txtProductNameLeft" Width="100" HorizontalAlignment="Center" Margin="0,0,0,5"/>
                 <TextBlock Text="Number of productpieces" HorizontalAlignment="Center" Margin="0,0,0,5"/>
-                <TextBox Text="{Binding ProductPiece}" Width="100" HorizontalAlignment="Center" Margin="0,0,0,5"/>
+                <TextBox Name="txtProductPiecesLeft" Width="100" HorizontalAlignment="Center" Margin="0,0,0,5"/>
                 <TextBlock Text="Location ID" HorizontalAlignment="Center" Margin="0,0,0,5"/>
-                <TextBox Text="{Binding LocationID}" Width="100" HorizontalAlignment="Center" Margin="0,0,0,20"/>
+                <TextBox Name="txtLocationLeft" Width="100" HorizontalAlignment="Center" Margin="0,0,0,20"/>
 
-                <Button MinWidth="90" HorizontalAlignment="Center" Margin="0,0,0,10">
+                <Button Name="btnGetProducts" Click="btnGetProducts_Click" MinWidth="90" HorizontalAlignment="Center" Margin="0,0,0,10">
                     <TextBlock Text="Get Products"  HorizontalAlignment="Center" Padding="2"/>
                 </Button>
-                <Button MinWidth="90" HorizontalAlignment="Center">
+                <Button Name="btnAddProducts" Click="btnAddProducts_Click" MinWidth="90" HorizontalAlignment="Center">
                     <TextBlock Text="Add Products"  HorizontalAlignment="Center" Padding="2"/>
                 </Button>
             </StackPanel>
 
-            <StackPanel Grid.Column="2">
+            <StackPanel Name="sp2" Visibility ="Collapsed" Grid.Column="2">
             <TextBlock Text="Productname" HorizontalAlignment="Center" Margin="0,0,0,5"/>
-            <TextBox Text="{Binding ProductName}" Width="100" HorizontalAlignment="Center" Margin="0,0,0,5"/>
+            <TextBox Name="txtProductNameRight" Width="100" HorizontalAlignment="Center" Margin="0,0,0,5"/>
             <TextBlock Text="Old Location ID" HorizontalAlignment="Center" Margin="0,0,0,5"/>
-            <TextBox Text="{Binding OldLocationID}" Width="100" HorizontalAlignment="Center" Margin="0,0,0,5"/>
+            <TextBox Name="txtOldLocationRight" Width="100" HorizontalAlignment="Center" Margin="0,0,0,5"/>
             <TextBlock Text="New Location ID" HorizontalAlignment="Center" Margin="0,0,0,5"/>
-            <TextBox Text="{Binding NewLocationID}" Width="100" HorizontalAlignment="Center" Margin="0,0,0,20"/>
+            <TextBox Name="txtNewLocationRight" Width="100" HorizontalAlignment="Center" Margin="0,0,0,20"/>
 
-            <Button MinWidth="90" HorizontalAlignment="Center">
+            <Button Name="btnTransferProducts" Click="btnTransferProducts_Click" MinWidth="90" HorizontalAlignment="Center">
                 <TextBlock x:Name="btnText" Text="Transfer Products" HorizontalAlignment="Center" Padding="2"/>
             </Button>
         </StackPanel>
